[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-design"
version = "0.1.0"
description = "A hand-rolled RAG pipeline for AI backend design knowledge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pymupdf4llm>=0.0.17",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
    "pydantic-settings>=2.0.0",
    "ragas>=0.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
]

[project.scripts]
rag = "rag_design.__main__:app"


[tool.hatch.build.targets.wheel]
packages = ["src/rag_design"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
